# boss-wxapp-autoapply

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  notify.py  rules.py
backend/app/api/: applications.py  config_api.py  jobs.py  logs.py  media.py  messages.py  pipeline.py  session.py
backend/app/automation/: inbox_watcher.py
backend/app/cdp/: __init__.py  client.py
backend/app/desktop/: __init__.py  capture.py  input.py  ocr.py  window.py
backend/app/llm/: __init__.py  client.py  prompts.py
backend/app/pages/: boss_wxapp.py
backend/app/pipeline/: collector.py  dispatcher.py  rate_limiter.py  runner.py  screener.py
backend/app/security/: auth.py
docs/: boss-wxapp-autoapply-plan.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: api.ts  main.tsx  routeTree.gen.ts
frontend/src/components/: ApplicationBoard.tsx  DecisionLog.tsx  DeviceSidebar.tsx  InboxPanel.tsx  RuleConfigForm.tsx  ThemeToggle.tsx
frontend/src/components/ui/: TagInput.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  tabs.tsx
frontend/src/lib/: device-context.tsx  i18n.ts  socket.ts  sse.ts
frontend/src/lib/locales/: en.ts  zh.ts
frontend/src/routes/: __root.tsx  applications.tsx  inbox.tsx  index.tsx  logs.tsx  rules.tsx  screen.tsx  settings.tsx
frontend/src/styles/: globals.css
